[기영] API작업
